Mon Oct  3 23:56:39 2011  CHIKANAGA Tomoyuki  <nagachika00@gmail.com>

	* gc.c (rb_gc_set_params): output GC parameter change messages only
	  if -w/-v options are specified. these messages are output to stderr,
	  not to stdout. [ruby-core:39795] [Bug #5380]

	* test/ruby/test_gc.rb (test_gc_parameter): add test for it.

Sun Oct  2 20:05:32 2011  Kazuki Tsujimoto  <kazuki@callcc.net>

	* vm.c (rb_thread_mark), cont.c (cont_mark): revert r33369 and r33371
	  that may cause SEGV in certain environments.

Sun Oct 02 12:14:06 2011  Ayumu AIZAWA  <ayumu.aizawa@gmail.com>

	* test/psych/test_yamldbm.rb: add test case.
	* test/syck/test_yamldbm.rb: ditto.

Sun Oct  2 11:28:09 2011  Aaron Patterson <aaron@tenderlovemaking.com>

	* lib/yaml/store.rb: make initialize method signature match the
	  superclass signature.

Sun Oct  2 10:44:01 2011  Kazuki Tsujimoto  <kazuki@callcc.net>

	* io.c: fix documentation of ARGF.lineno=.

Sat Oct  1 20:03:19 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/mkmf.rb (have_framework): try as Objective-C.
	  https://twitter.com/nagachika/status/120294447660539904

Sun Oct  2 08:43:25 2011  Kazuki Tsujimoto  <kazuki@callcc.net>

	* vm.c (rb_thread_mark), cont.c (cont_mark): self pointer should not
	  be marked by itself. Patch by Koichi Sasada.
	  [ruby-dev:44567] [Bug #5386]

Sun Oct  2 00:42:14 2011  Kazuki Tsujimoto  <kazuki@callcc.net>

	* vm.c (rb_thread_mark): rb_thread_t needs self to be marked.
	  [ruby-dev:44566] [Bug #5386]

Sat Oct  1 09:48:53 2011  CHIKANAGA Tomoyuki  <nagachika00@gmail.com>

	* gc.c (add_heap_slots, init_heap): reset heaps_inc zero when
	  heap slots are expanded by environment variable RUBY_HEAP_MIN_SLOTS.
	  [ruby-core:39777] [Bug #5380]

	* test/ruby/test_gc.rb (test_gc_parameter): add test for it.

	* test/ruby/envutil.rb (assert_normal_exit): add :child_env option to
	  enable pass environemnt variables to child process.

Thu Sep 29 13:17:51 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>
